Fix logo spacing

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -1,5 +1,9 @@
 /* Custom CSS for Nemo Docs */
 
+.main-logo {
+	margin-bottom: 20px;
+}
+
 .wy-table-responsive table td, .wy-table-responsive table th{
 	white-space: normal;
 }
